# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_action_filter
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2022-12-27 12:00:00'
     AND timestamp <= '2023-01-04 12:00:00'
     and notEmpty(session_id)
     WHERE 1=1
       AND (((event = 'custom-event'
              AND (has(['Firefox'], replaceRegexpAll(JSONExtractRaw(properties, '$browser'), '^"|"$', ''))
                   AND has(['test_action_filter-session-one'], "$session_id")
                   AND has(['test_action_filter-window-id'], "$window_id")))))
     GROUP BY session_id
     HAVING hasAll(event_names, ['custom-event']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2022-12-14 00:00:00'
  AND s.min_first_timestamp >= '2022-12-28 00:00:00'
  AND s.max_last_timestamp <= '2023-01-04 00:00:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_action_filter.1
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2022-12-27 12:00:00'
     AND timestamp <= '2023-01-04 12:00:00'
     and notEmpty(session_id)
     WHERE 1=1
       AND (((event = 'custom-event'
              AND (has(['test_action_filter-session-one'], "$session_id")
                   AND has(['test_action_filter-window-id'], "$window_id")))))
     GROUP BY session_id
     HAVING hasAll(event_names, ['custom-event']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2022-12-14 00:00:00'
  AND s.min_first_timestamp >= '2022-12-28 00:00:00'
  AND s.max_last_timestamp <= '2023-01-04 00:00:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_action_filter.2
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2022-12-27 12:00:00'
     AND timestamp <= '2023-01-04 12:00:00'
     and notEmpty(session_id)
     WHERE 1=1
       AND (((event = 'custom-event'
              AND (has(['test_action_filter-session-one'], "$session_id")
                   AND has(['test_action_filter-window-id'], "$window_id"))))
            AND (has(['Firefox'], replaceRegexpAll(JSONExtractRaw(properties, '$browser'), '^"|"$', ''))))
     GROUP BY session_id
     HAVING hasAll(event_names, ['custom-event']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2022-12-14 00:00:00'
  AND s.min_first_timestamp >= '2022-12-28 00:00:00'
  AND s.max_last_timestamp <= '2023-01-04 00:00:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_action_filter.3
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2022-12-27 12:00:00'
     AND timestamp <= '2023-01-04 12:00:00'
     and notEmpty(session_id)
     WHERE 1=1
       AND (((event = 'custom-event'
              AND (has(['test_action_filter-session-one'], "$session_id")
                   AND has(['test_action_filter-window-id'], "$window_id"))))
            AND (has(['Chrome'], replaceRegexpAll(JSONExtractRaw(properties, '$browser'), '^"|"$', ''))))
     GROUP BY session_id
     HAVING hasAll(event_names, ['custom-event']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2022-12-14 00:00:00'
  AND s.min_first_timestamp >= '2022-12-28 00:00:00'
  AND s.max_last_timestamp <= '2023-01-04 00:00:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_all_filters_at_once
  '
  WITH distinct_ids_for_person as
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2 as pdi
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id PREWHERE team_id = 2
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0
     and person_id = '00000000-0000-0000-0000-000000000000') ,
       events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-21 12:00:00'
     AND timestamp <= '2021-01-05 11:59:59'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$pageview')
       OR (((event = 'custom-event')))
     GROUP BY session_id
     HAVING hasAll(event_names, ['$pageview', 'custom-event']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-22 00:00:00'
  AND s.max_last_timestamp <= '2021-01-04 23:59:59'
  WHERE 1=1
    AND distinct_id in
      (select distinct_id
       from distinct_ids_for_person)
  GROUP BY session_id
  HAVING 1=1
  AND duration > 60
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_any_event_filter_with_properties
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2021-01-13 12:00:00'
     AND timestamp <= '2021-01-22 08:00:00'
     and notEmpty(session_id)
     WHERE 1=1
       AND (1 = 1)
     GROUP BY session_id)
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-31 20:00:00'
  AND s.min_first_timestamp >= '2021-01-14 00:00:00'
  AND s.max_last_timestamp <= '2021-01-21 20:00:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_any_event_filter_with_properties.1
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2021-01-13 12:00:00'
     AND timestamp <= '2021-01-22 08:00:00'
     and notEmpty(session_id)
     WHERE 1=1
       AND (1 = 1
            AND (has(['Chrome'], replaceRegexpAll(JSONExtractRaw(properties, '$browser'), '^"|"$', ''))))
     GROUP BY session_id)
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-31 20:00:00'
  AND s.min_first_timestamp >= '2021-01-14 00:00:00'
  AND s.max_last_timestamp <= '2021-01-21 20:00:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_any_event_filter_with_properties.2
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2021-01-13 12:00:00'
     AND timestamp <= '2021-01-22 08:00:00'
     and notEmpty(session_id)
     WHERE 1=1
       AND (1 = 1
            AND (has(['Firefox'], replaceRegexpAll(JSONExtractRaw(properties, '$browser'), '^"|"$', ''))))
     GROUP BY session_id)
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-31 20:00:00'
  AND s.min_first_timestamp >= '2021-01-14 00:00:00'
  AND s.max_last_timestamp <= '2021-01-21 20:00:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_any_event_filter_with_properties_materialized
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2021-01-13 12:00:00'
     AND timestamp <= '2021-01-22 08:00:00'
     and notEmpty(session_id)
     WHERE 1=1
       AND (1 = 1)
     GROUP BY session_id)
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-31 20:00:00'
  AND s.min_first_timestamp >= '2021-01-14 00:00:00'
  AND s.max_last_timestamp <= '2021-01-21 20:00:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_any_event_filter_with_properties_materialized.1
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2021-01-13 12:00:00'
     AND timestamp <= '2021-01-22 08:00:00'
     and notEmpty(session_id)
     WHERE 1=1
       AND (1 = 1
            AND (has(['Chrome'], "mat_$browser")))
     GROUP BY session_id)
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-31 20:00:00'
  AND s.min_first_timestamp >= '2021-01-14 00:00:00'
  AND s.max_last_timestamp <= '2021-01-21 20:00:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_any_event_filter_with_properties_materialized.2
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2021-01-13 12:00:00'
     AND timestamp <= '2021-01-22 08:00:00'
     and notEmpty(session_id)
     WHERE 1=1
       AND (1 = 1
            AND (has(['Firefox'], "mat_$browser")))
     GROUP BY session_id)
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-31 20:00:00'
  AND s.min_first_timestamp >= '2021-01-14 00:00:00'
  AND s.max_last_timestamp <= '2021-01-21 20:00:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_basic_query
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_basic_query_active_sessions
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  AND duration > 60
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_basic_query_active_sessions.1
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  AND active_seconds > 60
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_basic_query_active_sessions.2
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  AND inactive_seconds > 60
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_basic_query_with_paging
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 2
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_basic_query_with_paging.1
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 2
  OFFSET 1
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_basic_query_with_paging.2
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 2
  OFFSET 2
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_date_from_filter
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2021-01-01 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_date_from_filter.1
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-30 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_date_from_filter_cannot_search_before_ttl
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 12:46:00'
  AND s.min_first_timestamp >= '2020-12-12 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 12:46:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_date_from_filter_cannot_search_before_ttl.1
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 12:46:00'
  AND s.min_first_timestamp >= '2020-12-11 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 12:46:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_date_from_filter_cannot_search_before_ttl.2
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 12:46:00'
  AND s.min_first_timestamp >= '2020-12-10 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 12:46:00'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_date_to_filter
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2020-12-28 23:59:59'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_date_to_filter.1
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2020-12-29 23:59:59'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_duration_filter
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  AND duration > 60
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_duration_filter.1
  '
  
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  AND duration < 60
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$pageview')
     GROUP BY session_id
     HAVING hasAll(event_names, ['$pageview']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter.1
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$autocapture')
     GROUP BY session_id
     HAVING hasAll(event_names, ['$autocapture']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_active_sessions
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$pageview')
     GROUP BY session_id
     HAVING hasAll(event_names, ['$pageview']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  AND duration > 60
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_active_sessions.1
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$pageview')
     GROUP BY session_id
     HAVING hasAll(event_names, ['$pageview']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  AND active_seconds > 60
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_cohort_properties
  '
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_cohort_properties.1
  '
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_cohort_properties.2
  '
  with distinct_ids_for_person as
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2 as pdi
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id PREWHERE team_id = 2
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0
     AND (pdi.person_id IN
            (SELECT DISTINCT person_id
             FROM cohortpeople
             WHERE team_id = 2
               AND cohort_id = 2
               AND version = 0 )))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2021-07-31 20:00:00'
  AND s.min_first_timestamp >= '2021-08-14 00:00:00'
  AND s.max_last_timestamp <= '2021-08-21 20:00:00'
  WHERE 1=1
    AND distinct_id in
      (select distinct_id
       from distinct_ids_for_person)
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_matching_on_session_id
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$pageview')
     GROUP BY session_id
     HAVING hasAll(event_names, ['$pageview']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_matching_on_session_id.1
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$autocapture')
     GROUP BY session_id
     HAVING hasAll(event_names, ['$autocapture']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_person_properties
  '
  with distinct_ids_for_person as
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2 as pdi
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
          AND id IN
            (SELECT id
             FROM person
             WHERE team_id = 2
               AND (has(['bla'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', ''))) )
        GROUP BY id
        HAVING max(is_deleted) = 0
        AND (has(['bla'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'email'), '^"|"$', '')))) person ON person.id = pdi.person_id PREWHERE team_id = 2
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0)
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
    AND distinct_id in
      (select distinct_id
       from distinct_ids_for_person)
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_properties
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$pageview'
            AND (has(['Chrome'], replaceRegexpAll(JSONExtractRaw(properties, '$browser'), '^"|"$', ''))))
     GROUP BY session_id
     HAVING hasAll(event_names, ['$pageview']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_properties.1
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$pageview'
            AND (has(['Firefox'], replaceRegexpAll(JSONExtractRaw(properties, '$browser'), '^"|"$', ''))))
     GROUP BY session_id
     HAVING hasAll(event_names, ['$pageview']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_properties_materialized
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$pageview'
            AND (has(['Chrome'], "mat_$browser")))
     GROUP BY session_id
     HAVING hasAll(event_names, ['$pageview']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_properties_materialized.1
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$pageview'
            AND (has(['Firefox'], "mat_$browser")))
     GROUP BY session_id
     HAVING hasAll(event_names, ['$pageview']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_multiple_event_filters
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$pageview')
       OR (event = 'new-event')
     GROUP BY session_id
     HAVING hasAll(event_names, ['$pageview', 'new-event']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_multiple_event_filters.1
  '
  WITH events_session_ids AS
    (SELECT groupUniqArray(event) as event_names,
            groupArray(uuid) as event_ids,
            `$session_id` as session_id
     FROM events PREWHERE team_id = 2
     AND timestamp >= '2020-12-24 12:00:00'
     AND timestamp <= '2021-01-02 01:46:23'
     and notEmpty(session_id)
     WHERE 1=1
       AND (event = '$pageview')
       OR (event = 'new-event2')
     GROUP BY session_id
     HAVING hasAll(event_names, ['$pageview', 'new-event2']))
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds ,
         any(e.event_ids) as matching_events
  FROM session_replay_events s
  JOIN events_session_ids e ON s.session_id = e.session_id PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_person_id_filter
  '
  with distinct_ids_for_person as
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2 as pdi
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id PREWHERE team_id = 2
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0
     and person_id = '00000000-0000-0000-0000-000000000000')
  SELECT s.session_id,
         any(s.team_id),
         any(s.distinct_id),
         min(s.min_first_timestamp) as start_time,
         max(s.max_last_timestamp) as end_time,
         dateDiff('SECOND', start_time, end_time) as duration,
         argMinMerge(s.first_url) as first_url,
         sum(s.click_count),
         sum(s.keypress_count),
         sum(s.mouse_activity_count),
         sum(s.active_milliseconds)/1000 as active_seconds,
         duration-active_seconds as inactive_seconds
  FROM session_replay_events s PREWHERE s.team_id = 2
  AND s.min_first_timestamp >= '2020-12-11 13:46:23'
  AND s.min_first_timestamp >= '2020-12-25 00:00:00'
  AND s.max_last_timestamp <= '2021-01-01 13:46:23'
  WHERE 1=1
    AND distinct_id in
      (select distinct_id
       from distinct_ids_for_person)
  GROUP BY session_id
  HAVING 1=1
  ORDER BY start_time DESC
  LIMIT 51
  OFFSET 0
  '
---
